# LPPL-RUST-SIMULATOR-BubbleDetector

./: .gitignore  Cargo.toml  README.md  YAHOO_FINANCE_API.md  instructions_for_ai.md  user_instructions.md
grok-build-assets/: gemini-data-LPPLS.md  test-by-another-person.ipynb
results/: AMTX_equity.csv  AMTX_signals.csv  CAR_equity.csv  CAR_signals.csv
src/: engine.rs  lib.rs  main.rs
src/modules/: backtest.rs  bubble_score.rs  data.rs  hlppl_signals.rs  hype.rs  lppl.rs  mod.rs  sentiment.rs  utils.rs
