[package]
name = "hlpll-backtester"
version = "0.1.0"
edition = "2021"
default-run = "hlpll-backtester"

[features]
default = ["cli"]
# Core HLPPL logic engine only (no CLI/TUI/GUI deps). Perfect for isolating the backtester as a library.
core = []
# Enables the classic CLI binary (uses clap for args).
cli = ["dep:clap", "dep:env_logger"]
# Enables the TUI "backtesting explorer" (ratatui).
tui = ["dep:ratatui", "dep:crossterm"]
# Enables the native Windows GUI binary (egui/eframe) — proper desktop UI + interactive charts.
gui = ["dep:egui", "dep:eframe", "dep:egui_plot"]

[dependencies]
# =====================
# CORE / LOGIC ENGINE (always included; this is the isolatable HLPPL backtesting engine)
# =====================
# Data handling 
polars = { version = "0.45", features = [
    "lazy", "parquet", "csv", "temporal", "serde", 
    "dtype-date", "dtype-datetime", "dtype-time",
    "strings", "round_series", "concat_str", "is_in", "fmt"
] }
polars-ops = "0.45"
# HTTP client for Yahoo Finance (used by the engine's data layer)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Plotting (used for artifact export — part of the engine's output capabilities)
plotters = "0.3"
# Serde (for data structs)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging (used inside the engine for warnings during LPPL fitting)
log = "0.4"
# RNG + stats (pure, no linalg) — used by LPPL fitter
rand = "0.8"
statrs = "0.17"
# Small dense linear algebra (pure Rust) — used by LPPL linear solves
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# =====================
# OPTIONAL (frontends / CLIs only)
# =====================
# Classic CLI
clap = { version = "4.5", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

# TUI explorer (terminal UI)
ratatui = { version = "0.26", features = ["crossterm"], optional = true }
crossterm = { version = "0.28", optional = true }

# Native GUI explorer (egui + eframe for a proper Windows .exe with nice interactive charts)
egui = { version = "0.28", optional = true }
eframe = { version = "0.28", optional = true, features = ["default"] }
egui_plot = { version = "0.28", optional = true }

[[bin]]
name = "hlpll-backtester"
path = "src/main.rs"
# Built with: cargo run --release --bin hlpll-backtester   (cli feature is default)

[[bin]]
name = "hlpll-explorer"
path = "src/bin/explorer.rs"
required-features = ["tui"]
# Built with: cargo run --release --bin hlpll-explorer --no-default-features --features tui

[[bin]]
name = "hlpll-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]
# Built with: cargo run --release --bin hlpll-gui --no-default-features --features gui
# Produces a real native Windows desktop app (double-clickable .exe) with proper UI + live charts.
